package updates; base layout updates; set browsersync config option to open localhost url at runtime;

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -19,7 +19,7 @@
     <h2 class="text-4xl font-black">{{ title }}</h2>
   </div>
 
-  <div class="prose max-w-none">
+  <div class="prose prose-stone max-w-none">
     {{ content | safe }}
   </div>
   
