--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,24 +17,25 @@
     </header>
     <main class="mb-8 grid gap-8 lg:grid-cols-[minmax(0,_1fr)_28%]">
       <article>
+        
         <header class="mb-8">
           <h2 class="text-4xl font-black">{{ title }}</h2>
           <p class="mt-4 text-2xl font-medium">{{ description }}</p>
         </header>
+        
         <main class="prose max-w-none prose-stone prose-a:text-blue-600 hover:prose-a:no-underline">
           {{ content | safe }}
         </main>
+
       </article>
       <aside>
         <div class="lg:sticky lg:top-4 px-9 py-5 rounded-md border border-black">
           <p class="text-2xl font-black mb-2">Index</p>
           <nav>
             <ul class="list-square ml-3">
-              {% for post in collections.posts %}
-              <li>
-                <a class="block py-1 font-bold underline hover:no-underline focus:no-underline" href="{{ post.url }}">{{ post.data.title }}</a>
-              </li>
-              {% endfor %}
+            {% for post in collections.posts %}
+              <li><a class="block py-1 font-bold underline hover:no-underline focus:no-underline" href="{{ post.url }}">{{ post.data.title }}</a></li>
+            {% endfor %}
             </ul>
           </nav>
         </div>
